add category icon and item image
