# docs/swagger.yaml
@@ -40,6 +40,10 @@ definitions:
     properties:
       description:
         type: string
+      id:
+        type: integer
+      image:
+        type: string
       item_variants:
         items:
           $ref: '#/definitions/landing.ItemVariant'
@@ -53,6 +57,10 @@ definitions:
     type: object
   landing.ItemCategory:
     properties:
+      icon:
+        type: string
+      id:
+        type: integer
       items:
         items:
           $ref: '#/definitions/landing.Item'
@@ -64,6 +72,8 @@ definitions:
     type: object
   landing.ItemVariant:
     properties:
+      id:
+        type: integer
       item_variant_options:
         items:
           $ref: '#/definitions/landing.ItemVariantOption'
@@ -77,6 +87,8 @@ definitions:
     type: object
   landing.ItemVariantOption:
     properties:
+      id:
+        type: integer
       name:
         type: string
       price:
@@ -86,6 +98,8 @@ definitions:
     properties:
       code:
         type: string
+      id:
+        type: integer
       item_categories:
         items:
           $ref: '#/definitions/landing.ItemCategory'
